# edge-of-the-world

./: .cruft.json  .gitignore  AGENTS.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-test.yml
conda.recipe/: meta.yaml
dev/: getting_started.ipynb
docs/: conf.py  environment.yaml  index.md
docs/interpreters/: index.md  loss.md  provider_mix.md  scenario.md  standard.md  temporal.md  temporal_scenario.md
src/bw_eotw/: __init__.py  backend.py  config.py  edge_classes.py  matrix_entry.py  node_classes.py  registry.py
src/bw_eotw/interpreters/: __init__.py  loss.py  provider_mix.py  scenario.py  singlevalue.py  standard.py  temporal.py  temporal_scenario.py
tests/: __init__.py  conftest.py  test_backend.py  test_interpreters.py  test_lca_integration.py  test_loss.py  test_provider_mix.py  test_repr.py  test_requires_config.py  test_scenario.py  test_temporal.py  test_temporal_scenario.py
