[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bw_eotw"
authors = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
maintainers = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
description = "An alternate backend for Brightway that allows richer edge descriptions that don't map 1-to-1 to matrix values."
readme = "README.md"
license-files = ["LICENSE"]
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "bw2data>=4.0",
    "bw_processing>=1.1",
]

[project.urls]
source = "https://github.com/brightway-lca/edge-of-the-world"
homepage = "https://github.com/brightway-lca/edge-of-the-world"
tracker = "https://github.com/brightway-lca/edge-of-the-world/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "bw_eotw",
    "pytest",
    "pytest-cov",
    "python-coveralls"
]
dev = [
    "build",
    "mkdocs-material",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
]


[tool.setuptools]
include-package-data = true
packages = ["bw_eotw", "bw_eotw.interpreters"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
version = {attr = "bw_eotw.__version__"}

[tool.pytest.ini_options]
addopts = "--cov src/bw_eotw --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
